kdecoration: Update titlebar when borders change

updateTitleBar() uses borderTop() so it should be called again when
borders change.

The root cause of the bug: when the caption changes, breeze is going
to schedule a repaint for titleBar(). Since it's not properly
updated when the borders change, the title bar may not be repainted
as expected.

BUG: 499222


(cherry picked from commit 31998126b20324eb97c920cc00a3aa1a4f17a7c4)

9fc41c08 kdecoration: Update titlebar when borders change

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>